output/GluGlu_Radion_tauTau_2018/err/file_3314869.20.err
  File "/afs/cern.ch/work/v/vdamante/public/analysis/triggerStudiesAnalysis.py", line 1312
    elif(option = 'iter_0Baseline'):
                ^
SyntaxError: invalid syntax
